[package]
name = "fla"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT"

[[bin]]
name = "fla"
required-features = [ "cli" ]

[dependencies]
bitflags = "1.2.1"
euclid = "0.20.14"
quick-xml = { version = "0.19.0", features = [ "serialize" ] }
serde = { version = "1.0.117", features = [ "derive" ] }
thiserror = "1.0.21"
zip = "0.5.8"

# Optional
raqote = { version = "0.8.0", default-features = false, optional = true }
argh = { version = "0.1.3", optional = true }

[features]
render-raqote = [ "raqote" ]
cli = [ "argh", "render-raqote" ]
